another modify to logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -46,20 +46,18 @@
                 <section id="a-chi-e-adatta">
                     <h2>A chi è adatta (e a chi no)</h2>
 
-                    <p>Scopri subito se la Logitech MX Keys S è la tastiera giusta per te o se potresti voler considerare alternative:</p>
-
-                    <h3>Consigliata se:</h3>
+                    <h3>Consigliata se</h3>
                     <ul>
-                        <li>lavori/studi al PC molte ore</li>
-                        <li>vuoi scrivere comodo e silenzioso</li>
-                        <li>preferisci la sensazione laptop</li>
+                        <li>Lavori/studi al PC molte ore</li>
+                        <li>Vuoi scrivere comodo e silenzioso</li>
+                        <li>Preferisci la sensazione laptop</li>
                     </ul>
 
-                    <h3>NON consigliata se:</h3>
+                    <h3>NON consigliata se</h3>
                     <ul>
-                        <li>vuoi un feedback meccanico</li>
-                        <li>fai gaming competitivo</li>
-                        <li>hai un budget limitato</li>
+                        <li>Vuoi un feedback meccanico</li>
+                        <li>Fai gaming competitivo</li>
+                        <li>Hai un budget limitato</li>
                     </ul>
                 </section>
 
@@ -67,7 +65,7 @@
                 <section id="pro-contro">
                     <h2>Pro e Contro</h2>
 
-                    <p>Ecco i principali punti di forza e le criticità della Logitech MX Keys S, così puoi avere subito un’idea chiara del prodotto:</p>
+                    <p>Ecco i principali punti di forza e le criticità della Logitech MX Keys S:</p>
 
                     <h3>Pro</h3>
                     <ul>
@@ -97,14 +95,13 @@
                 <section id="nella-vita-reale">
                     <h2>Dettagli tecnici</h2>
                     <ul>
-                        <li>autonomia di poco superiore a 5 mesi senza retroilluminazione, una decina di giorni con</li>
+                        <li>autonomia di poco superiore a 5 mesi senza retroilluminazione, una decina di giorni se attiva</li>
                         <li>connessione bluetooth con dongle o senza</li>
                         <li>dispositivi multipli</li>
-                        <li>collegamento fino a 3 dispositivi</li>
                     </ul>
                     <p>L’autonomia della Logitech MX Keys S è notevole: supera i cinque mesi se non usi la retroilluminazione, mentre con i LED attivi dura circa una decina di giorni.</p>
                     <p>Puoi collegarla via Bluetooth o tramite il dongle Logi Bolt incluso nella confezione, con connessione stabile e rapida.</p>
-                    <p>La tastiera supporta fino a tre dispositivi contemporaneamente, permettendoti di passare facilmente da PC a tablet o laptop usando i tasti Easy Switch.</p>
+                    <p>La tastiera supporta fino a tre dispositivi contemporaneamente, permettendoti di passare facilmente da PC a tablet o laptop usando i tasti Easy Switch, supportando sistemi operativi come Windows, macOS, Linux, Chrome OS e anche altri sistemi mobile.</p>
                 </section>
 
                 <!-- CONFRONTO -->
