Modify introduction of logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -12,7 +12,7 @@
             </a>
 
             <div id="header-nav"></div>
-            <h1>Recensione tastiera wireless Logitech MX Keys S</h1>
+            <h1>Logitech MX Keys S tastiera wireless</h1>
         </header>
 
         <main>
@@ -32,13 +32,13 @@
 
                 <!-- INTRODUZIONE -->
                 <section id="introduzione">
-                    <h2>Introduzione</h2>
+                    <h2>La mia esperienza con la Logitech MX Keys S</h2>
                     <p>
                         La Logitech MX Keys S è una tastiera pensata per chi lavora molte ore al computer.
                         Non nasce per il gaming estremo, ma per produttività, scrittura, programmazione e uso quotidiano intenso.
                     </p>
                     <p>
-                        In questa recensione scopriremo pregi, difetti e tutto ciò che devi sapere prima di acquistarla.
+                        Dopo averla usata quotidianamente, ecco cosa mi è piaciuto davvero e cosa invece potrebbe non fare per te.
                     </p>
                 </section>
 
@@ -63,8 +63,6 @@
 
                 <!-- PRO CONTRO -->
                 <section id="pro-contro">
-                    <h2>Pro e Contro</h2>
-
                     <p>Ecco i principali punti di forza e le criticità della Logitech MX Keys S:</p>
 
                     <h3>Pro</h3>
