slightly modify in logitech-mx-key-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -33,11 +33,13 @@
                 <section id="introduzione">
                     <h2>La mia esperienza con la Logitech MX Keys S</h2>
                     <p>
-                        La Logitech MX Keys S è una tastiera pensata per chi lavora molte ore al computer.
-                        Non nasce per il gaming estremo, ma per produttività, scrittura, programmazione e uso quotidiano intenso.
+                        Ho usato la MX Keys S come tastiera principale per lavoro quotidiano: scrittura, studio, gaming e navigazione per diverse ore al giorno.
                     </p>
                     <p>
-                        Dopo averla usata quotidianamente, ecco cosa mi è piaciuto davvero e cosa invece potrebbe non fare per te.
+                        È una tastiera progettata più per la comodità nel lungo periodo che per l'impatto iniziale dei tasti, quindi l'esperienza cambia molto rispetto alle meccaniche.
+                    </p>
+                    <p>
+                        Qui sotto trovi cosa succede davvero nell'uso quotidiano: cosa migliora, cosa può dare fastidio e se può essere la scelta giusta per le tue esigenze.
                     </p>
                 </section>
 
@@ -85,7 +87,7 @@
                 <section id="esperienza-uso">
                     <h2>Esperienza di uso quotidiana</h2>
                     <p>Usando la Logitech MX Keys S per alcune ore, ti dimentichi di star usando una tastiera esterna: è stabile, precisa e molto simile a scrivere su un portatile.</p>
-                    <p>Se vieni da una tastiera meccanica, all’inizio potrebbe sembrare “troppo morbida”, ma presto ti accorgi che affatica meno durante le lunghe sessioni di scrittura.</p>
+                    <p>Se vieni da una tastiera meccanica, all'inizio potrebbe sembrare “troppo morbida”, ma presto ti accorgi che affatica meno durante le lunghe sessioni di scrittura.</p>
                 </section>
 
                 <!-- NELLA VITA REALE -->
@@ -96,7 +98,7 @@
                         <li>connessione bluetooth con dongle o senza</li>
                         <li>dispositivi multipli</li>
                     </ul>
-                    <p>L’autonomia della Logitech MX Keys S è notevole: supera i cinque mesi se non usi la retroilluminazione, mentre con i LED attivi dura circa una decina di giorni.</p>
+                    <p>L'autonomia della Logitech MX Keys S è notevole: supera i cinque mesi se non usi la retroilluminazione, mentre con i LED attivi dura circa una decina di giorni.</p>
                     <p>Puoi collegarla via Bluetooth o tramite il dongle Logi Bolt incluso nella confezione, con connessione stabile e rapida.</p>
                     <p>La tastiera supporta fino a tre dispositivi contemporaneamente, permettendoti di passare facilmente da PC a tablet o laptop usando i tasti Easy Switch, supportando sistemi operativi come Windows, macOS, Linux, Chrome OS e anche altri sistemi mobile.</p>
                 </section>
@@ -105,7 +107,7 @@
                 <section id="confronto">
                     <h2>Confronto</h2>
                     <p>Rispetto a una tastiera meccanica: la MX Keys S è più comoda e silenziosa, ma meno coinvolgente per chi ama il feedback tattile dei tasti.</p>
-                    <p>Rispetto a tastiere economiche: offre maggiore stabilità, precisione e una costruzione più solida, ideale per l’uso quotidiano intenso.</p>
+                    <p>Rispetto a tastiere economiche: offre maggiore stabilità, precisione e una costruzione più solida, ideale per l'uso quotidiano intenso.</p>
                 </section>
 
                 <!-- CONCLUSIONI -->
