--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <p class="data">Febbraio 2026</p>
         <title>Recensione Logitech MX Keys S - LogiTechie</title>
         <link rel="stylesheet" href="css/common.css">
         <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
