add title to PRO E CONTRO

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -3,7 +3,7 @@
     <section id="prodotto">
         <figure class="prodotto">
             <a href="https://www.amazon.it/dp/B07W8P53H7">
-                <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="Logitech MX Keys S" width="300">
+                <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="Logitech MX Keys S">
             </a>
         </figure>
 
@@ -44,7 +44,7 @@
 
     <!-- PRO CONTRO -->
     <section id="pro-contro">
-        <p>Ecco i principali punti di forza e le criticità della Logitech MX Keys S:</p>
+        <h2>Pro e Contro</h2>
 
         <h3>Pro</h3>
         <ul>
