change some word

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -13,13 +13,13 @@
     <section id="introduzione">
         <h2>La mia esperienza con la Logitech MX Keys S</h2>
         <p>
-            Ho usato la MX Keys S come tastiera principale per lavoro quotidiano: scrittura, studio, gaming e navigazione per diverse ore al giorno.
+            Dopo alcune settimane di utilizzo la Logitech MX Keys S è diventata la tastiera su cui scrivo più velocemente — ma non è stato amore al primo colpo.
         </p>
         <p>
-            È una tastiera progettata più per la comodità nel lungo periodo che per l'impatto iniziale dei tasti, quindi l'esperienza cambia molto rispetto alle meccaniche.
+            I primi giorni sembra quasi “troppo morbida”, soprattutto se arrivi da una meccanica. Poi succede una cosa curiosa: dopo qualche ora non ci fai più caso, e quando torni a una tastiera normale la senti improvvisamente rumorosa e più stancante.
         </p>
         <p>
-            Qui sotto trovi cosa succede davvero nell'uso quotidiano: cosa migliora, cosa può dare fastidio e se può essere la scelta giusta per le tue esigenze.
+            Questa non è una tastiera che impressiona nei primi 5 minuti, è una tastiera che apprezzi dopo 5 ore.
         </p>
     </section>
 
@@ -44,7 +44,7 @@
 
     <!-- PRO CONTRO -->
     <section id="pro-contro">
-        <h2>Pro e Contro</h2>
+        <!-- <h2>Pro e Contro</h2> -->
 
         <h3>Pro</h3>
         <ul>
@@ -75,7 +75,7 @@
         <h2>Dettagli tecnici</h2>
         <ul>
             <li>autonomia di poco superiore a 5 mesi senza retroilluminazione, una decina di giorni se attiva</li>
-            <li>connessione bluetooth con dongle o senza</li>
+            <li>connettività via dongle e bluetooth</li>
             <li>dispositivi multipli</li>
         </ul>
         <p>L'autonomia della Logitech MX Keys S è notevole: supera i cinque mesi se non usi la retroilluminazione, mentre con i LED attivi dura circa una decina di giorni.</p>
