add img in NELLA VITA REALE

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -3,17 +3,16 @@
     <section id="prodotto">
         <figure class="prodotto">
             <a href="https://www.amazon.it/dp/B07W8P53H7">
-                <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="Logitech MX Keys S">
+                <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
             </a>
         </figure>
-
     </section>
 
     <!-- INTRODUZIONE -->
     <section id="introduzione">
         <h2>La mia esperienza con la Logitech MX Keys S</h2>
         <p>
-            Dopo alcune settimane di utilizzo la Logitech MX Keys S è diventata la tastiera su cui scrivo più velocemente — ma non è stato amore al primo colpo.
+            Dopo alcune settimane di utilizzo la Logitech MX Keys S è diventata la tastiera su cui scrivo più velocement, ma non è stato amore al primo colpo.
         </p>
         <p>
             I primi giorni sembra quasi “troppo morbida”, soprattutto se arrivi da una meccanica. Poi succede una cosa curiosa: dopo qualche ora non ci fai più caso, e quando torni a una tastiera normale la senti improvvisamente rumorosa e più stancante.
@@ -73,6 +72,11 @@
     <!-- NELLA VITA REALE -->
     <section id="nella-vita-reale">
         <h2>Dettagli tecnici</h2>
+        <figure class="prodotto">
+            <a href="https://www.amazon.it/dp/B07W8P53H7">
+                <img src="https://m.media-amazon.com/images/I/81mZNflueBL._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
+            </a>
+        </figure>
         <ul>
             <li>autonomia di poco superiore a 5 mesi senza retroilluminazione, una decina di giorni se attiva</li>
             <li>connettività via dongle e bluetooth</li>
