add padding rules fot mobile

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -82,7 +82,7 @@
             <li>connettività via dongle e bluetooth</li>
             <li>dispositivi multipli</li>
         </ul>
-        <p>L'autonomia della Logitech MX Keys S è notevole: supera i cinque mesi se non usi la retroilluminazione, mentre con i LED attivi dura circa una decina di giorni.</p>
+        <p>L'autonomia della Logitech MX Keys S è notevole: supera i cinque mesi se non usi la retroilluminazione, mentre con i LED e sensore di luminosità attivi dura circa una decina di giorni.</p>
         <p>Puoi collegarla via Bluetooth o tramite il dongle Logi Bolt incluso nella confezione, con connessione stabile e rapida.</p>
         <p>La tastiera supporta fino a tre dispositivi contemporaneamente, permettendoti di passare facilmente da PC a tablet o laptop usando i tasti Easy Switch, supportando sistemi operativi come Windows, macOS, Linux, Chrome OS e anche altri sistemi mobile.</p>
     </section>
