--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -74,7 +74,7 @@
         <h2>Dettagli tecnici</h2>
         <figure class="prodotto">
             <a href="https://www.amazon.it/dp/B07W8P53H7">
-                <img src="https://m.media-amazon.com/images/I/81mZNflueBL._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
+                <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera-3-dispositivi.png" alt="tastiera Logitech MX Keys S">
             </a>
         </figure>
         <ul>
