--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -2,9 +2,12 @@
     <!-- PRODOTTO -->
     <section id="prodotto">
         <figure class="prodotto">
-            <a href="https://www.amazon.it/dp/B07W8P53H7">
+            <a href="https://eugenioguidi.github.io/html/tracker/logitech-mx-keys-s-tracker.html" target="_blank">
                 <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
             </a>
+            <!-- <a href="https://www.amazon.it/dp/B07W8P53H7">
+                <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
+            </a> -->
         </figure>
     </section>
 
