add retarded script for amazon link

--- a/html/tracker/logitech-mx-keys-s-tracker.html
+++ b/html/tracker/logitech-mx-keys-s-tracker.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recensione Logitech MX Keys S - LogiTechie</title>
+        <script src="https://eugenioguidi.github.io/js/tracker/logitech-mx-keys-s-tracker.js" defer></script>
     </head>
     <body>
         <!-- Default Statcounter code for trackerlogitech-mx-keys-s https://eugenioguidi.github.iohtml/tracker/logitech-mx-keys-s-tracker.html -->
