--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -73,7 +73,7 @@
     <section id="nella-vita-reale">
         <h2>Dettagli tecnici</h2>
         <figure class="prodotto">
-            <a href="https://www.amazon.it/dp/B07W8P53H7">
+            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank">
                 <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera-3-dispositivi.png" alt="tastiera Logitech MX Keys S">
             </a>
         </figure>
