--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -44,7 +44,11 @@
     <!-- PRO CONTRO -->
     <section id="pro-contro">
         <!-- <h2>Pro e Contro</h2> -->
-
+         <figure class="prodotto">
+            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank">
+                <img src="https://m.media-amazon.com/images/I/71eQ6LGY6RL._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
+            </a>
+        </figure>
         <h3>Pro</h3>
         <ul>
             <li>Non fa rumore → puoi scrivere anche di notte</li>
