--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -46,7 +46,7 @@
         <!-- <h2>Pro e Contro</h2> -->
          <figure class="prodotto">
             <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank">
-                <img src="https://m.media-amazon.com/images/I/71eQ6LGY6RL._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
+                <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera-connessioni.png" alt="tastiera Logitech MX Keys S">
             </a>
         </figure>
         <h3>Pro</h3>
