add button "Verifica disponibilità Amazon"

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -64,6 +64,11 @@
             <li>Con illuminazione attiva la carichi spesso</li>
             <li>Prezzo non economico</li>
         </ul>
+        <div class="cta-amazon">
+            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored">
+                Verifica disponibilità Amazon
+            </a>
+        </div>
     </section>
 
     <!-- ESPERIENZA -->
@@ -110,5 +115,10 @@
         <p>
             In sintesi: ottima per produttività e lavoro creativo, meno indicata per il gaming.
         </p>
+        <div class="cta-amazon">
+            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored">
+                Verifica disponibilità Amazon
+            </a>
+        </div>
     </section>
 </article>
