add skeleton to logitech mx master 3s

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -61,7 +61,7 @@
             <li>Prezzo non economico</li>
         </ul>
         <div class="cta-amazon">
-            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored">
+            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored noopener noreferrer">
                 Verifica disponibilità Amazon
             </a>
         </div>
@@ -110,7 +110,7 @@
             In sintesi: ottima per produttività e lavoro creativo, meno indicata per il gaming.
         </p>
         <div class="cta-amazon">
-            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored">
+            <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored noopener noreferrer">
                 Verifica disponibilità Amazon
             </a>
         </div>
