--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <a href="https://eugenioguidi.github.io">
-                <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="300" id="logo" />
+                <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" />
             </a>
 
             <div id="header-nav"></div>
