--- a/logitech-mx-master-3s.html
+++ b/logitech-mx-master-3s.html
@@ -2,29 +2,31 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recensione Logitech MX Master 3s - LogiTechie</title>
+        <link rel="stylesheet" href="css/common.css">
+        <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
+        <script src="https://eugenioguidi.github.io/js/logitech-mx-master-3s/main-article.js" defer></script>
     </head>
-    <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
         <header>
-            <a href="https://eugenioguidi.github.io"><img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="300" id="logo" /></a>
+            <a href="https://eugenioguidi.github.io">
+                <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" />
+            </a>
+
             <div id="header-nav"></div>
-            <h1>Recensione mouse wireless Logitech MX Master 3s</h1>
+            <p class="data">Febbraio 2026</p>
+            <h1>Logitech MX Master 3s mouse wireless</h1>
         </header>
-    </body>
-    <main>
-        <section>
-            <div class="prodotto">
-                <a href="https://www.amazon.it/Logitech-Master-2025-prestazioni-tracciamento/dp/B0FHHV6YR5/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1GX3FVII2IGG2&dib=eyJ2IjoiMSJ9.M1qMyOextINfKueq1McTRPG7RPDmA8VqFWmay0FZLtZZbn4Wg_cisPcOghBbYlCXDiz_5IeNX12fGhMG2SHwWogak2y81kyz6_xm0jV9KZPIaipAzZKZcuWH6ZeYOOnNm1Vx05P4MtYkiG750rJe7ZXR-xRf0atfMBVOM9-9ViIPZbVgdBJ5RGXGmRCFJX2EbaRM_QrvnDf5583b7BXDRndMrYmpSkZKqRFjWfF4GrlyL0-Qm-jw3ALU5FfLPoWrum6_HqerUwFVXfMDFq6S6Pwpx1zf0aJnhMXDBFjbd1w.y2v0GNRA9Ar8AB76W-whDlQYY_HpB2mozFJGpHGTdeI&dib_tag=se&keywords=logitech%2Bmouse&qid=1770413924&sprefix=logitech%2Bmouse%2Caps%2C252&sr=8-1&ufe=app_do%3Aamzn1.fos.fca66a76-6518-40f2-959f-2dca30e9c5d1&th=1">
-                    <img src="https://m.media-amazon.com/images/I/618IJzC-fFL._AC_SL1500_.jpg" alt="Logitech MX Master 3S" width="300">
-                </a>
-                <p>Mouse ergonomico Logitech MX Master 3S, perfetto per lavoro e creatività.</p>
-            </div>
-            <p>Recensito a febbraio 2026</p>
-        </section>
+
+        <main>
+            <div id="main-article"></div>
+        </main>
+        
         <footer>
             <div id="footer"></div>
         </footer>
+
         <!-- Default Statcounter code for Recensione Logitech mx master 3s https://eugenioguidi.github.io/logitech-mx-master-3s.html -->
         <script type="text/javascript">
             var sc_project=13204077; 
@@ -40,5 +42,5 @@
             </div>
         </noscript>
         <!-- End of Statcounter Code -->
-    </main>
+    </body>
 </html>
