downloaded img of tastiera

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -2,7 +2,7 @@
     <!-- PRODOTTO -->
     <section id="prodotto">
         <figure class="prodotto">
-            <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
+            <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera.png" alt="tastiera Logitech MX Keys S">
         </figure>
     </section>
 
