modify file css

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -1,13 +1,13 @@
 <article>
     <!-- PRODOTTO -->
-    <section id="prodotto">
+    <section id="prodotto" class="review-section">
         <figure class="prodotto">
             <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera.png" alt="tastiera Logitech MX Keys S">
         </figure>
     </section>
 
     <!-- INTRODUZIONE -->
-    <section id="introduzione">
+    <section id="introduzione" class="review-section">
         <h2>La mia esperienza con la Logitech MX Keys S</h2>
         <p>
             Dopo alcune settimane di utilizzo la Logitech MX Keys S è diventata la tastiera su cui scrivo più velocement, ma non è stato amore al primo colpo.
@@ -21,7 +21,7 @@
     </section>
 
     <!-- A CHI E ADATTA -->
-    <section id="a-chi-e-adatta">
+    <section id="a-chi-e-adatta" class="review-section">
         <h2>A chi è adatta (e a chi no)</h2>
 
         <h3>Consigliata se</h3>
@@ -40,7 +40,7 @@
     </section>
 
     <!-- PRO CONTRO -->
-    <section id="pro-contro">
+    <section id="pro-contro" class="review-section">
         <!-- <h2>Pro e Contro</h2> -->
          <figure class="prodotto">
             <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera-connessioni.png" alt="tastiera Logitech MX Keys S">
@@ -51,7 +51,7 @@
             <li>Telaio pesante, non si muove nemmeno se scrivi forte</li>
             <li>Illuminazione intelligente (si accende quando avvicini le mani)</li>
             <li>Passi da PC a tablet in un secondo</li>
-            <li>Completamente personalizzabile usando l'app ufficiale Logi Options+</li>
+            <li>Completamente personalizzabile usando l'app ufficiale gratuita Logi Options+</li>
         </ul>
 
         <h3>Contro</h3>
@@ -68,14 +68,14 @@
     </section>
 
     <!-- ESPERIENZA -->
-    <section id="esperienza-uso">
+    <section id="esperienza-uso" class="review-section">
         <h2>Esperienza di uso quotidiana</h2>
         <p>Usando la Logitech MX Keys S per alcune ore, ti dimentichi di star usando una tastiera esterna: è stabile, precisa e molto simile a scrivere su un portatile.</p>
         <p>Se vieni da una tastiera meccanica, all'inizio potrebbe sembrare “troppo morbida”, ma presto ti accorgi che affatica meno durante le lunghe sessioni di scrittura.</p>
     </section>
 
     <!-- NELLA VITA REALE -->
-    <section id="nella-vita-reale">
+    <section id="nella-vita-reale" class="review-section">
         <h2>Dettagli tecnici</h2>
         <figure class="prodotto">
             <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera-3-dispositivi.png" alt="tastiera Logitech MX Keys S">
@@ -91,14 +91,14 @@
     </section>
 
     <!-- CONFRONTO -->
-    <section id="confronto">
+    <section id="confronto" class="review-section">
         <h2>Confronto</h2>
         <p>Rispetto a una tastiera meccanica: la MX Keys S è più comoda e silenziosa, ma meno coinvolgente per chi ama il feedback tattile dei tasti.</p>
         <p>Rispetto a tastiere economiche: offre maggiore stabilità, precisione e una costruzione più solida, ideale per l'uso quotidiano intenso.</p>
     </section>
 
     <!-- CONCLUSIONI -->
-    <section id="conclusioni">
+    <section id="conclusioni" class="review-section">
         <h2>Considerazioni finali</h2>
         <p>
             Se passi molte ore al computer e vuoi una tastiera che non affatichi le mani e sia silenziosa, la MX Keys S è una delle migliori scelte sul mercato.
