--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -10,17 +10,13 @@
     </head>
     <body>
         <header>
-            <a href="https://eugenioguidi.github.io">
-                <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" />
-            </a>
-
             <div id="header-nav"></div>
             <p class="data">Febbraio 2026</p>
             <h1>Logitech MX Keys S tastiera wireless</h1>
         </header>
 
         <main>
-            <div id="main-article"></div>
+            <div class="container" id="main-article"></div>
         </main>
 
         <footer>
