fixed class in mouse file

--- a/html/recensioni/logitech-mx-master-3s/main-article.html
+++ b/html/recensioni/logitech-mx-master-3s/main-article.html
@@ -1,18 +1,18 @@
 <article>
     <!-- PRODOTTO -->
-    <section id="prodotto">
+    <section id="prodotto" class="review-section">
         <figure class="prodotto">
             <img src="https://m.media-amazon.com/images/I/618IJzC-fFL._AC_SL1500_.jpg" alt="tastiera Logitech MX Keys S">
         </figure>
     </section>
 
     <!-- INTRODUZIONE -->
-    <section id="introduzione">
+    <section id="introduzione" class="review-section">
         <h2>La mia esperienza con il Logitech MX Master 3S</h2>
     </section>
 
     <!-- A CHI E ADATTA -->
-    <section id="a-chi-e-adatta">
+    <section id="a-chi-e-adatta" class="review-section">
         <h2>A chi è adatta (e a chi no)</h2>
 
         <h3>Consigliata se</h3>
@@ -25,7 +25,7 @@
     </section>
 
     <!-- PRO CONTRO -->
-    <section id="pro-contro">
+    <section id="pro-contro" class="review-section">
         <!-- <h2>Pro e Contro</h2> -->
          <figure class="prodotto">
             <img src="" alt="mouse Logitech MX Master 3S">
@@ -46,12 +46,12 @@
     </section>
 
     <!-- ESPERIENZA -->
-    <section id="esperienza-uso">
+    <section id="esperienza-uso" class="review-section">
         <h2>Esperienza di uso quotidiana</h2>
     </section>
 
     <!-- NELLA VITA REALE -->
-    <section id="nella-vita-reale">
+    <section id="nella-vita-reale" class="review-section">
         <h2>Dettagli tecnici</h2>
         <figure class="prodotto">
             <img src="" alt="mouse Logitech MX Master 3S">
@@ -61,12 +61,12 @@
     </section>
 
     <!-- CONFRONTO -->
-    <section id="confronto">
+    <section id="confronto" class="review-section">
         <h2>Confronto</h2>
     </section>
 
     <!-- CONCLUSIONI -->
-    <section id="conclusioni">
+    <section id="conclusioni" class="review-section">
         <h2>Considerazioni finali</h2>
 
         <div class="cta-amazon">
