--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/common.css">
         <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
         <script src="https://eugenioguidi.github.io/js/logitech-mx-keys-s/main-article.js" defer></script>
+        <script src="https://eugenioguidi.github.io/js/footer.js" defer></script>
     </head>
     <body>
         <header>
