add css to home page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Home - LogiTechi</title>
+        <link rel="stylesheet" href="css/common.css">
     </head>
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
