change position of burger icon in fixed

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div id="header-nav"></div>
-            <p class="data">Febbraio 2026</p>
+            <p class="data">Recensione di Febbraio 2026</p>
             <h1>Logitech MX Keys S tastiera wireless</h1>
         </header>
 
