--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -1,8 +1,8 @@
 <article>
     <!-- PRODOTTO -->
-    <section id="prodotto" class="review-section">
+    <!-- <section id="prodotto" class="review-section">
         
-    </section>
+    </section> -->
 
     <!-- INTRODUZIONE -->
     <section id="introduzione" class="review-section">
