--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/common.css">
     </head>
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
+    <script src="https://eugenioguidi.github.io/js/footer.js" defer></script>
     <body>
         <header>
             <div id="header-nav"></div>
