--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
                 </ul>
             </section>
         </main>
+
         <footer>
-            <p>&copy; 2026 Recensioni Logitech</p>
-            <p>
-                <a href="#">Disclosure Amazon Affiliates</a> | 
-                <a href="#">Privacy Policy</a>
-            </p>
+            <div id="footer"></div>
         </footer>
+        
         <!-- Default Statcounter code for Recensioni Logitech https://eugenioguidi.github.io -->
         <script type="text/javascript">
             var sc_project=13203834; 
