add href of mx master 3s

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -109,7 +109,7 @@
         <p> Se invece cerchi una tastiera per gaming competitivo o un'esperienza più “tattile”, potresti considerare alternative meccaniche.</p>
         <p> In sintesi: ottima per produttività e lavoro creativo, meno indicata per il gaming.</p>
         <p> Proprio per questo, chi la sceglie raramente sta cercando solo una tastiera, ma un modo per rendere più confortevole l'intera postazione di lavoro. Logitech ha infatti progettato la MX Keys S per essere utilizzata insieme alla serie MX Master, creando un setup pensato per chi lavora molte ore tra browser, documenti e software creativi.</p>
-        <p> Vale quindi la pena dare un'occhiata anche al MX Master 3S, il complemento naturale di questa tastiera: stessi materiali, stessa filosofia ergonomica e soprattutto le stesse funzioni di gestione multi-dispositivo.</p>
+        <p> Vale quindi la pena dare un'occhiata anche al <a href="https://eugenioguidi.github.io/logitech-mx-master-3s.html">MX Master 3S</a>, il complemento naturale di questa tastiera: stessi materiali, stessa filosofia ergonomica e soprattutto le stesse funzioni di gestione multi-dispositivo.</p>
         <div class="cta-amazon-card">
             <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera.png" alt="Logitech MX Keys S" class="cta-amazon-img">
             <div class="cta-amazon-info">
