changed name of button's amazon

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -65,9 +65,7 @@
             <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera.png" alt="Logitech MX Keys S" class="cta-amazon-img">
             <div class="cta-amazon-info">
                 <h3 class="cta-amazon-title">Logitech MX Keys S</h3>
-                <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored noopener noreferrer" class="cta-amazon-button">
-                    Acquista su Amazon
-                </a>
+                <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored noopener noreferrer" class="cta-amazon-button">Controlla prezzo su Amazon</a>
             </div>
         </div>
     </section>
@@ -114,9 +112,7 @@
             <img src="https://eugenioguidi.github.io/uploads/static/tastiera-logitech-mx-keys-s/tastiera.png" alt="Logitech MX Keys S" class="cta-amazon-img">
             <div class="cta-amazon-info">
                 <h3 class="cta-amazon-title">Logitech MX Keys S</h3>
-                <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored noopener noreferrer" class="cta-amazon-button">
-                    Acquista su Amazon
-                </a>
+                <a href="https://www.amazon.it/dp/B07W8P53H7" target="_blank" rel="nofollow sponsored noopener noreferrer" class="cta-amazon-button">Controlla prezzo su Amazon</a>
             </div>
         </div>
     </section>
