--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -14,7 +14,7 @@
             <div id="header-nav"></div>
             <p class="data">Recensione di Febbraio 2026</p>
             <h1>Logitech MX Keys S tastiera wireless</h1>
-            <p>Questo articolo contiene link di affiliazione Amazon. Potrei ricevere una commissione senza costi aggiuntivi per te.</p>
+            <p id="disclaimer-affiliazione" class="disclaimer-affiliazione">Questo articolo contiene link di affiliazione Amazon. Potrei ricevere una commissione senza costi aggiuntivi per te.</p>
         </header>
 
         <main>
