fixed some style in logo

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div id="header-nav"></div>
+            <div id="header-nav" class="header-nav"></div>
             <p class="data">Recensione di Febbraio 2026</p>
             <h1>Logitech MX Keys S tastiera wireless</h1>
             <p id="disclaimer-affiliazione" class="disclaimer-affiliazione">Questo articolo contiene link di affiliazione Amazon. Potrei ricevere una commissione senza costi aggiuntivi per te.</p>
