move h1 and initial disclaimer

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -3,6 +3,9 @@
     <!-- <section id="prodotto" class="review-section">
         
     </section> -->
+    <h1>Logitech MX Keys S tastiera wireless</h1>
+    <p class="data">Recensione di Febbraio 2026</p>
+    <p id="disclaimer-affiliazione" class="disclaimer-affiliazione">Questo articolo contiene link di affiliazione Amazon. Potrei ricevere una commissione senza costi aggiuntivi per te.</p>
 
     <!-- INTRODUZIONE -->
     <section id="introduzione" class="review-section">
