--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -11,10 +11,8 @@
     </head>
     <body>
         <header>
+            <!-- qui ci dovrei mettere il div per il logo -->
             <div id="header-nav" class="header-nav"></div>
-            <p class="data">Recensione di Febbraio 2026</p>
-            <h1>Logitech MX Keys S tastiera wireless</h1>
-            <p id="disclaimer-affiliazione" class="disclaimer-affiliazione">Questo articolo contiene link di affiliazione Amazon. Potrei ricevere una commissione senza costi aggiuntivi per te.</p>
         </header>
 
         <main>
