fixed position of h1

--- a/html/recensioni/logitech-mx-keys-s/main-article.html
+++ b/html/recensioni/logitech-mx-keys-s/main-article.html
@@ -4,7 +4,7 @@
         
     </section> -->
 
-    <section id="article-head" class="review-section"></section>
+    <section id="article-head" class="review-section">
         <h1>Logitech MX Keys S tastiera wireless</h1>
         <p class="data">Recensione di Febbraio 2026</p>
         <p id="disclaimer-affiliazione" class="disclaimer-affiliazione">Questo articolo contiene link di affiliazione Amazon. Potrei ricevere una commissione senza costi aggiuntivi per te.</p>
